--- a/app/templates/user/login.html
+++ b/app/templates/user/login.html
@@ -11,81 +11,7 @@
 {% block content_title %}{% endblock %}
 
 {% block page_content %}
-<script>
-function signInCallback(authResult) {
-    if (authResult['code']) {
-        //Hide the sign-in button now that user is authorized,
-        $('#signinButton').attr('style', 'display: none');
-        $.ajax({
-            type: 'POST',
-            url: '/gconnect?state={{STATE}}',
-            processData: false,
-            contentType: 'application/octet-stream; charset=utf-8',
-            data: authResult['code'],
-            success: function(result) {
-                if (result) {
-                    $('#result').html('Login Successful! Redirecting...')
-                    setTimeout(function() {
-                        window.location.href = "/index";
-                    }, 5000);
-                } else if (authResult['error']) {
-                    console.log('There was an error:' + authResult['error']);
-                } else {
-                    $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-                }
-            }         
-        });
-    }
-}
-</script>
-<script>
-  window.fbAsyncInit = function() {
-  FB.init({
-    appId      : '213071912359270',
-    cookie     : true,  // enable cookies to allow the server to access 
-                        // the session
-    xfbml      : true,  // parse social plugins on this page
-    version    : 'v2.5' // use version 2.5
-    });
-  };
-  // Load the SDK asynchronously
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/sdk.js";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
 
-  function sendTokenToServer() {
-    var access_token = FB.getAuthResponse()['accessToken'];
-    console.log(access_token)
-    console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me', function(response) {
-        console.log('Successful login for: ' + response.name);
-        $.ajax({
-        type: 'POST',
-        url: '/fbconnect?state={{STATE}}',
-        processData: false,
-        data: access_token,
-        contentType: 'application/octet-stream; charset=utf-8',
-        success: function(result) {
-            // Handle or verify the server response if necessary.
-            if (result) {
-              $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-             setTimeout(function() {
-              window.location.href = "/index";
-             }, 4000);
-              
-          } else {
-            $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-             }
-          }
-      
-        });
-    });
-  }
-</script>
 <br>
 <div class="row">
     <div class="span12">
@@ -99,25 +25,13 @@ function signInCallback(authResult) {
                 <p>You can also sign in using your Facebook Account or Google Account</p>
                 <br />
                 <br />
-                <fb:login-button scope="public_profile,email" onlogin="sendTokenToServer();">
-                    <a href='javascript:sendTokenToServer()'>Login with Facebook</a>
-                </fb:login-button>
-
-                <br />
-                <div id="signInButton">
-                    <span class="g-signin"
-                        data-scope="openid email"
-                        data-clientid="630855590588-vo8prdaiqt3ekvk1u5afujm7t9bvgvrr.apps.googleusercontent.com"
-                        data-redirecturi="postmessage"
-                        data-accesstype="offline"
-                        data-cookiepolicy="single_host_origin"
-                        data-callback="signInCallback"
-                        data-approvalprompt="force">
-                    </span>
+                <div id="fb-login">
+                    <p><a href="{{ url_for('user_blueprint.oauth_authorize', provider='facebook') }}">Login with Facebook</a></p>
                 </div>
-                <!--
-                <a href="" class="btn btn-large btn-block btn-google">Login with Google</a>
-                -->
+                <div id="g-login">
+                    <p><a href="{{ url_for('user_blueprint.oauth_authorize', provider='google') }}">Login with Google</a></p>
+                </div>
+                <br />
             </div>
             <div class="col2">
                 <div class="form-heading">
